force-app/main/default/objects/CustomObject1__c/fields/HC40Quantity__c.field-meta.xml
<CustomField>
    <fullName>HC40Quantity__c</fullName>
    <formula>IF( text(Container__c) =&quot;40&apos;HC&quot;, ContainerNumber__c,
IF( text(Container2__c) =&quot;40&apos;HC&quot;, ContainerNumber2__c,
IF( text(Container3__c) =&quot;40&apos;HC&quot;, ContainerNumber3__c,
IF( text(Container4__c) =&quot;40&apos;HC&quot;, ContainerNumber4__c,
IF( text(Container5__c) =&quot;40&apos;HC&quot;, ContainerNumber6__c,
IF( text(Container6__c) =&quot;40&apos;HC&quot;, ContainerNumber5__c,
IF( text(Container7__c) =&quot;40&apos;HC&quot;, ContainerNumber7__c, 0)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>40&apos;HC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>