force-app/main/default/objects/CustomObject1__c/fields/HDS__c.field-meta.xml
<CustomField>
    <fullName>HDS__c</fullName>
    <inlineHelpText>Hot Delivery Service(Only some carriers provide this service between Japan and China)</inlineHelpText>
    <label>HDS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし(No)</fullName>
                <default>true</default>
                <label>なし(No)</label>
            </value>
            <value>
                <fullName>あり(Yes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>