force-app/main/default/objects/CustomObject1__c/fields/HistoryOfUnpaid__c.field-meta.xml
<CustomField>
    <fullName>HistoryOfUnpaid__c</fullName>
    <description>与信項目。
未収金になった場合はチェックを入れる。</description>
    <label>HISTORY OF UNPAID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし(No)</fullName>
            </value>
            <value>
                <fullName>あり(Yes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>