force-app/main/default/objects/CustomObject1__c/fields/HOUSEBL_SUBMIT__c.field-meta.xml
<CustomField>
    <fullName>HOUSEBL_SUBMIT__c</fullName>
    <inlineHelpText>Only when POL is Bangladesh, choose this status.</inlineHelpText>
    <label>RETURN STATUS OF H B/L TO CARRIER</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BLtype__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>未回収</fullName>
            </value>
            <value>
                <fullName>回収済み・船社へも提出</fullName>
            </value>
            <value>
                <fullName>船社へ提出済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>