force-app/main/default/objects/CustomObject1__c/fields/HouseBookingNo__c.field-meta.xml
<CustomField>
    <fullName>HouseBookingNo__c</fullName>
    <label>HOUSE BOOKING NO</label>
    <type>TextArea</type>
</CustomField>