force-app/main/default/objects/CustomObject1__c/fields/HouseNotifyPartyShortName__c.field-meta.xml
<CustomField>
    <fullName>HouseNotifyPartyShortName__c</fullName>
    <formula>Notifyparty__r.CompanyShortName__c</formula>
    <label>House Notify Party Short Name</label>
    <type>Text</type>
</CustomField>