force-app/main/default/objects/CustomObject1__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Id, &apos;S&apos; &amp;  WkInitial__c  &amp; Name , &apos;_top&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FORWARDING ID</label>
    <type>Text</type>
</CustomField>