force-app/main/default/objects/CustomObject1__c/fields/IMDGClassCode__c.field-meta.xml
<CustomField>
    <fullName>IMDGClassCode__c</fullName>
    <label>IMDG Class Code</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>