force-app/main/default/objects/CustomObject1__c/fields/InvoiceIssueStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceIssueStatus__c</fullName>
    <inlineHelpText>Choose the status of invoice issue to customer. &apos;Copy Issued&apos; means invoice sent by Email or FAX and &apos;Original Issued&apos; means Original invoice is delivered to customer.</inlineHelpText>
    <label>INVOICE ISSUE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Progress</fullName>
                <default>true</default>
                <label>On Progress</label>
            </value>
            <value>
                <fullName>Not issued Yet-Vendor Invoice not recieved</fullName>
                <label>Not issued yet-Vendor Invoice not received</label>
            </value>
            <value>
                <fullName>At Internal Chekcing After Issue</fullName>
                <label>At Internal Checking After Issue</label>
            </value>
            <value>
                <fullName>At Internal Checking Confirmed After Issue</fullName>
            </value>
            <value>
                <fullName>Waiting for Other Invoice for Combine After Issue</fullName>
            </value>
            <value>
                <fullName>Invoice Copy Sent</fullName>
            </value>
            <value>
                <fullName>Original Invoice Sent</fullName>
            </value>
            <value>
                <fullName>No Settlement Required(Collect from Partner)</fullName>
            </value>
            <value>
                <fullName>Carry Over to Next Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>