force-app/main/default/objects/CustomObject1__c/fields/InvoicePrintDate__c.field-meta.xml
<CustomField>
    <fullName>InvoicePrintDate__c</fullName>
    <label>INVOICE ISSUE DATE</label>
    <type>Date</type>
</CustomField>