force-app/main/default/objects/CustomObject1__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <inlineHelpText>Describe the Goods as need to be written in B/L</inlineHelpText>
    <label>GOODS</label>
    <type>TextArea</type>
</CustomField>