force-app/main/default/objects/CustomObject1__c/fields/JobRequestID__c.field-meta.xml
<CustomField>
    <fullName>JobRequestID__c</fullName>
    <label>JOB REQUEST ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>