force-app/main/default/objects/CustomObject1__c/fields/LicenseofManufacturedCountry__c.field-meta.xml
<CustomField>
    <fullName>LicenseofManufacturedCountry__c</fullName>
    <label>CERTIFICATE OF ORIGIN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし(No)</fullName>
                <default>true</default>
                <label>なし(No)</label>
            </value>
            <value>
                <fullName>あり(Yes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>