force-app/main/default/objects/CustomObject1__c/fields/LoadAddressContact__c.field-meta.xml
<CustomField>
    <fullName>LoadAddressContact__c</fullName>
    <formula>IF (LoadLocation__r.LoadTEL__c = NULL, &quot;&quot;, &apos;TEL: &apos;&amp; LoadLocation__r.LoadTEL__c) &amp; IF (LoadLocation__r.LoadFAX__c = NULL, &quot;&quot;, &apos; FAX: &apos;&amp; LoadLocation__r.LoadFAX__c)
 

/*
&apos;TEL: &apos; &amp;  
clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadTEL__c &amp; &apos; FAX: &apos; &amp; clofor_com_cfs__LoadLocation__r.clofor_com_cfs__LoadFAX__c
*/</formula>
    <label>CARGO LOADING WAREHOUSE TEL/FAX(LOCAL)</label>
    <type>Text</type>
</CustomField>