force-app/main/default/objects/CustomObject1__c/fields/LoadingTime__c.field-meta.xml
<CustomField>
    <fullName>LoadingTime__c</fullName>
    <label>MANIFEST SUBMISSION DATE</label>
    <type>Date</type>
</CustomField>