force-app/main/default/objects/CustomObject1__c/fields/LoadLocation__c.field-meta.xml
<CustomField>
    <fullName>LoadLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Refer to Master A/N to confirm about loading Warehouse</inlineHelpText>
    <label>CARGO LOADING WAREHOUSE(LOCAL)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LoadLocation__c.WharehouseCompany__c</field>
            <operation>equals</operation>
            <valueField>$Source.BookingNv__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LoadLocation__c</referenceTo>
    <relationshipLabel>F/TMS S/O</relationshipLabel>
    <relationshipName>LoadLocation</relationshipName>
    <type>Lookup</type>
</CustomField>