force-app/main/default/objects/CustomObject1__c/fields/LoadLocation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>LoadLocation_Remarks__c</fullName>
    <formula>LoadLocation__r.Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CARGO LOADING WAREHOUSE REMARKS</label>
    <type>Text</type>
</CustomField>