force-app/main/default/objects/CustomObject1__c/fields/LoadLocationPIC__c.field-meta.xml
<CustomField>
    <fullName>LoadLocationPIC__c</fullName>
    <formula>LoadLocation__r.LoadLocationPIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIC OF WAREHOUSE</label>
    <type>Text</type>
</CustomField>