force-app/main/default/objects/CustomObject1__c/fields/LockActivated__c.field-meta.xml
<CustomField>
    <fullName>LockActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOCK ACTIVATED</label>
    <type>Checkbox</type>
</CustomField>