force-app/main/default/objects/CustomObject1__c/fields/LockBaseDate__c.field-meta.xml
<CustomField>
    <fullName>LockBaseDate__c</fullName>
    <label>LOCK BASE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PayBaseDate</valueSetName>
    </valueSet>
</CustomField>