force-app/main/default/objects/CustomObject1__c/fields/LockedTime__c.field-meta.xml
<CustomField>
    <fullName>LockedTime__c</fullName>
    <label>LOCKED TIME</label>
    <type>DateTime</type>
</CustomField>