force-app/main/default/objects/CustomObject1__c/fields/LockPlanDate__c.field-meta.xml
<CustomField>
    <fullName>LockPlanDate__c</fullName>
    <label>Lock Plan Date</label>
    <type>Date</type>
</CustomField>