force-app/main/default/objects/CustomObject1__c/fields/Mail_Merge_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Company_Name__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Company Name</label>
    <type>Text</type>
</CustomField>