force-app/main/default/objects/CustomObject1__c/fields/Mail_Merge_Foreign_Bank1__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Foreign_Bank1__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Foreign_Bank_Name_1__c &amp; 
$Setup.Site_Custom_Settings__c.Foreign_Bank_Account_1__c + $Setup.Site_Custom_Settings__c.Foreign_Account_Address_1__c &amp; 
$Setup.Site_Custom_Settings__c.Foreign_Account_No_1__c &amp; 
$Setup.Site_Custom_Settings__c.Foreign_Bank_1_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Foreign Bank1</label>
    <type>Text</type>
</CustomField>