force-app/main/default/objects/CustomObject1__c/fields/Mail_Merge_Foreign_Bank2__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Foreign_Bank2__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Foreign_Bank_Name_2__c &amp; 
$Setup.Site_Custom_Settings__c.Foreign_Bank_Account_2__c + $Setup.Site_Custom_Settings__c.Foreign_Account_Address_2__c &amp; 
$Setup.Site_Custom_Settings__c.Foreign_Account_No_2__c &amp; 
$Setup.Site_Custom_Settings__c.Foreign_Bank_2_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Foreign Bank2</label>
    <type>Text</type>
</CustomField>