force-app/main/default/objects/CustomObject1__c/fields/Mail_Merge_Local_Bank_3__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Local_Bank_3__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Local_Bank_Name_3__c &amp; BR() &amp; 
$Setup.Site_Custom_Settings__c.Local_Bank_3_Other__c &amp; $Setup.Site_Custom_Settings__c.Local_Account_No_3__c &amp; BR() &amp; 
$Setup.Site_Custom_Settings__c.Local_Bank_Account_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Local Bank 3</label>
    <type>Text</type>
</CustomField>