force-app/main/default/objects/CustomObject1__c/fields/Mail_Merge_Local_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Local_Company_Address__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Local_Company_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Local Company Address</label>
    <type>Text</type>
</CustomField>