force-app/main/default/objects/CustomObject1__c/fields/Mail_Merge_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Tax_Code__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Tax_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Tax Code</label>
    <type>Text</type>
</CustomField>