force-app/main/default/objects/CustomObject1__c/fields/Marks_and_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Marks_and_Numbers__c</fullName>
    <label>Marks and Numbers</label>
    <type>TextArea</type>
</CustomField>