force-app/main/default/objects/CustomObject1__c/fields/MARKS_NUMBERS_ATTACHMENT__c.field-meta.xml
<CustomField>
    <fullName>MARKS_NUMBERS_ATTACHMENT__c</fullName>
    <label>MARKS &amp; NUMBERS ATTACHMENT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>