force-app/main/default/objects/CustomObject1__c/fields/Master_B_L__c.field-meta.xml
<CustomField>
    <fullName>Master_B_L__c</fullName>
    <label>M B/L NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>