force-app/main/default/objects/CustomObject1__c/fields/MASTER_BOOKINGNO__c.field-meta.xml
<CustomField>
    <fullName>MASTER_BOOKINGNO__c</fullName>
    <inlineHelpText>Input Booking Number from Carrier for FCL and Consolidator for LCL.</inlineHelpText>
    <label>MASTER BOOKING NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>