force-app/main/default/objects/CustomObject1__c/fields/Master_No_of_Original_B_s_L__c.field-meta.xml
<CustomField>
    <fullName>Master_No_of_Original_B_s_L__c</fullName>
    <label>Number Of Original M B/L Issued</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Master_BL_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ZERO(0)</fullName>
            </value>
            <value>
                <fullName>ONE(1)</fullName>
            </value>
            <value>
                <fullName>TWO(2)</fullName>
            </value>
            <value>
                <fullName>THREE(3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>