force-app/main/default/objects/CustomObject1__c/fields/Master_Notify_Party__c.field-meta.xml
<CustomField>
    <fullName>Master_Notify_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MASTER NOTIFY PARTY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Master_notify_party</relationshipName>
    <type>Lookup</type>
</CustomField>