force-app/main/default/objects/CustomObject1__c/fields/MasterAnkenName__c.field-meta.xml
<CustomField>
    <fullName>MasterAnkenName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Choose only when Consolidation Cargo or Groupage Cargo</inlineHelpText>
    <label>MASTER SHIPMENT NAME</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ETD__c</field>
            <operation>equals</operation>
            <valueField>MasterAnken__c.METD__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MasterAnken__c</referenceTo>
    <relationshipName>MasterBL</relationshipName>
    <type>Lookup</type>
</CustomField>