force-app/main/default/objects/CustomObject1__c/fields/MasterSurrenderDeadline__c.field-meta.xml
<CustomField>
    <fullName>MasterSurrenderDeadline__c</fullName>
    <label>Master Surrender Confirmation Deadline</label>
    <type>Date</type>
</CustomField>