force-app/main/default/objects/CustomObject1__c/fields/MAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWB__c</fullName>
    <label>MAWB No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>