force-app/main/default/objects/CustomObject1__c/fields/MAWBNumberonAWB__c.field-meta.xml
<CustomField>
    <fullName>MAWBNumberonAWB__c</fullName>
    <formula>IF( LEN( MAWB__c) = 9,LEFT( MAWB__c , 3) +&quot; &quot; +  POL__r.PortCodeOnly__c  +&quot; &quot;+ RIGHT( MAWB__c , 6),
IF( LEN( MAWB__c) = 10,LEFT( MAWB__c , 3) +&quot; &quot; + POL__r.PortCodeOnly__c  +&quot; &quot;+ RIGHT( MAWB__c , 7),
IF( AND(LEN( MAWB__c)= 12, CONTAINS(MAWB__c,&apos;-&apos; )) ,LEFT( MAWB__c , 3) +&quot; &quot; + POL__r.PortCodeOnly__c  +&quot; &quot;+ RIGHT( MAWB__c , 8),
LEFT( MAWB__c , 3) +&quot; &quot; + POL__r.PortCodeOnly__c  +&quot; &quot;+ RIGHT( MAWB__c , 9))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAWB Number on AWB</label>
    <type>Text</type>
</CustomField>