force-app/main/default/objects/CustomObject1__c/fields/MBL_Number_SEA_AIR__c.field-meta.xml
<CustomField>
    <fullName>MBL_Number_SEA_AIR__c</fullName>
    <formula>IF (ISNULL(Master_B_L__c) || ISBLANK(Master_B_L__c) , MAWB__c , Master_B_L__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MBL Number（SEAorAIR）</label>
    <type>Text</type>
</CustomField>