force-app/main/default/objects/CustomObject1__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <deprecated>true</deprecated>
    <label>Measurement</label>
    <type>TextArea</type>
</CustomField>