force-app/main/default/objects/CustomObject1__c/fields/Measurement_L__c.field-meta.xml
<CustomField>
    <fullName>Measurement_L__c</fullName>
    <label>Measurement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>