force-app/main/default/objects/CustomObject1__c/fields/Meet_Completed_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Meet_Completed_Reminder__c</fullName>
    <label>Meet Completed Reminder</label>
    <type>Date</type>
</CustomField>