force-app/main/default/objects/CustomObject1__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>NOTES FOR INTERNAL STAFFS</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>