force-app/main/default/objects/CustomObject1__c/fields/MFreight_Collect_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>MFreight_Collect_Prepaid__c</fullName>
    <label>Master Freight Collect/Prepaid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FREIGHT PREPAID</fullName>
            </value>
            <value>
                <fullName>FREIGHT COLLECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>