force-app/main/default/objects/CustomObject1__c/fields/MitumoriKakuninsya__c.field-meta.xml
<CustomField>
    <fullName>MitumoriKakuninsya__c</fullName>
    <label>QUOTATION-CONFIRMER(LOCAL)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>