force-app/main/default/objects/CustomObject1__c/fields/MitumoriKakuninsyaENG__c.field-meta.xml
<CustomField>
    <fullName>MitumoriKakuninsyaENG__c</fullName>
    <label>QUOTATION-CONFIRMER(ENG)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>