force-app/main/default/objects/CustomObject1__c/fields/MitumoriSinseisya__c.field-meta.xml
<CustomField>
    <fullName>MitumoriSinseisya__c</fullName>
    <inlineHelpText>Port Code (Short)</inlineHelpText>
    <label>A.O.A (3 digits)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>