force-app/main/default/objects/CustomObject1__c/fields/MitumoriSinseisyaENG__c.field-meta.xml
<CustomField>
    <fullName>MitumoriSinseisyaENG__c</fullName>
    <description>A.O.D (3 digits)</description>
    <inlineHelpText>Port Code (Short)</inlineHelpText>
    <label>A.O.D (3 digits)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>