force-app/main/default/objects/CustomObject1__c/fields/MitumoriSyouninsya__c.field-meta.xml
<CustomField>
    <fullName>MitumoriSyouninsya__c</fullName>
    <inlineHelpText>[Transit] Master Carrier/Consolidator&apos;s [Account] Airliner Code</inlineHelpText>
    <label>QUOTATION-APPROVER(LOCAL)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>