force-app/main/default/objects/CustomObject1__c/fields/MitumoriSyouninsyaENG__c.field-meta.xml
<CustomField>
    <fullName>MitumoriSyouninsyaENG__c</fullName>
    <inlineHelpText>Port Code(Short)</inlineHelpText>
    <label>Transit Port Code (3 digits)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>