force-app/main/default/objects/CustomObject1__c/fields/mm_AirHBLPrefix__c.field-meta.xml
<CustomField>
    <fullName>mm_AirHBLPrefix__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Air_HBL_No_Prefix__c</formula>
    <label>Mail Merge Air HBL Prefix</label>
    <type>Text</type>
</CustomField>