force-app/main/default/objects/CustomObject1__c/fields/MonthlyFMSSOID__c.field-meta.xml
<CustomField>
    <fullName>MonthlyFMSSOID__c</fullName>
    <inlineHelpText>4 digits number based on Accounted Date, monthly reset</inlineHelpText>
    <label>Monthly FMS S/O ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>