force-app/main/default/objects/CustomObject1__c/fields/MonthlyHBLID__c.field-meta.xml
<CustomField>
    <fullName>MonthlyHBLID__c</fullName>
    <inlineHelpText>4 digits number based on ETD, monthly reset</inlineHelpText>
    <label>Monthly H B/L ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>