force-app/main/default/objects/CustomObject1__c/fields/NET_NET_Weight__c.field-meta.xml
<CustomField>
    <fullName>NET_NET_Weight__c</fullName>
    <inlineHelpText>Synchronized with Sum of Net Weight(Kg) in CNTR IN TRANS When below conditions meet; Container Mode is FCL, Container Type and Container Q&apos;ty are not null, Net Weight(Kg) in CNTR IN TRANS is not null.</inlineHelpText>
    <label>NET WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>