force-app/main/default/objects/CustomObject1__c/fields/No_Of_LoadingConfirmation__c.field-meta.xml
<CustomField>
    <fullName>No_Of_LoadingConfirmation__c</fullName>
    <inlineHelpText>Refer to MA/N and confirm the number for the shipment.</inlineHelpText>
    <label>WAREHOUSE CONFIRMATION NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>