force-app/main/default/objects/CustomObject1__c/fields/No_Voyage_Flight__c.field-meta.xml
<CustomField>
    <fullName>No_Voyage_Flight__c</fullName>
    <formula>IF ( ISNULL( Voy_No__c ) || ISBLANK(Voy_No__c) , FlightNo__c , Voy_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.(Voyage/Flight)</label>
    <type>Text</type>
</CustomField>