force-app/main/default/objects/CustomObject1__c/fields/NominationParty__c.field-meta.xml
<CustomField>
    <fullName>NominationParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NOMINATION PARTY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NominationParty</relationshipName>
    <type>Lookup</type>
</CustomField>