force-app/main/default/objects/CustomObject1__c/fields/NoofPackageorContainer__c.field-meta.xml
<CustomField>
    <fullName>NoofPackageorContainer__c</fullName>
    <deprecated>true</deprecated>
    <label>No of Package or Container</label>
    <type>TextArea</type>
</CustomField>